syntax = "proto3";

option csharp_namespace = "LuckyFoodSystem.UserRolesManagementService";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetAll(google.protobuf.Empty) returns (ListReply);
  rpc GetByName(GetUserByNameRequest) returns (UserReply);
  rpc Create(CreateUserRequest) returns (UserResponse);
  rpc Update(UpdateUserRequest) returns (UserResponse);
  rpc Delete(DeleteUserRequest) returns (UserResponse);
  rpc DeleteFromRole(DeleteUserFromRoleRequest) returns (UserResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (UserResponse);
}

message ListReply{
  repeated UserReply Users = 1;
}

message UserReply{
  string id = 1;
  string user_name=2;
  string email = 3;
  google.protobuf.StringValue phone_number = 4;
}
message ClaimModel{
	string name = 1;
	string value = 2;
}

message CreateUserRequest{
	string user_name = 1;
	string email = 2;
	bool email_confirmed = 3;
	string password = 4;
	repeated ClaimModel Claims = 5;
	string phone_number = 6;
}
message AddUserToRoleRequest{
	string user_name = 1;
	string role_name = 2;
}
message ChangePasswordRequest{
	string user_name = 1;
	string current_password = 2;
	string new_password = 3;
}
message GetUserByNameRequest{
	string name = 1;
}
message DeleteUserFromRoleRequest{
	string user_name = 1;
	string role_name = 2;
}
message DeleteUserRequest{
	string id = 1;
}
message UpdateUserRequest{
	string id = 1;
	UserReply User = 2;
}

message UserResponse{
	string code = 1;
	string description = 2;
}